--- a/src/app/main/pages/regist-incidentes-page/regist-incidentes-page.component.html
+++ b/src/app/main/pages/regist-incidentes-page/regist-incidentes-page.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="col-6 d-flex justify-content-end align-items-center">
     @if(active()) {
-      <button class="btn btn-main-action" (click)="openModal()"><img src="assets/list-plus.svg" width="25" alt="plus"> Nuevo incidente</button>
+      <button class="btn btn-main-action" (click)="openModal()" [disabled]="cierreValidacion()"><img src="assets/list-plus.svg" width="25" alt="plus"> Nuevo incidente</button>
     } @else {
       <button class="btn btn-main-action" disabled><i class="bi bi-plus-lg"></i> Nuevo incidente</button>
     }
