--- a/src/app/shared/components/resultados-actas/resultados-actas.component.html
+++ b/src/app/shared/components/resultados-actas/resultados-actas.component.html
@@ -15,37 +15,41 @@
     </div>
   </div>
 </form>
-<div class="row mx-0 shadow-lg rounded-3 py-3 my-4">
-  @for(constancia of listaConstancias; track $index) {
-    <div class="col-4">
-      <button class="btn" [class]="{'btn-main-action':constancia.id == 'proyectosParticipantes', 'btn-primary': constancia.id == 'WORD', 'btn-danger': constancia.id == 'PDF'}"
-      (click)="download(constancia.id)" [disabled]="!active">
-        <i class="bi" [class]="{'bi-filetype-pdf': constancia.id == 'PDF', 'bi-file-earmark-word': constancia.id == 'WORD', 'bi-file-earmark-spreadsheet-fill': constancia.id == 'proyectosParticipantes'}"></i>
-        {{constancia.nombre}} @if(constancia.id !== 'proyectosParticipantes'){ {{getTipo()}} }
-      </button>
-    </div>
-  }
-</div>
-@if(active && anio() > 1) {
+@if(anio() !== 0) {
   <div class="row mx-0 shadow-lg rounded-3 py-3 my-4">
-    @for(reporte of listaReportes; track $index) {
-      <div class="col-3">
-        <a (click)="download(reporte.id)">
-          <div class="card">
-            <div class="card-body">
-              <div class="row p-0 m-0">
-                <div class="col-3">
-                  <h1><i class="bi bi-file-earmark-spreadsheet-fill"></i></h1>
-                </div>
-                <div class="col-9">
-                  <h5 class="card-title">{{reporte.nombre}}</h5>
+    @for(constancia of listaConstancias; track $index) {
+      @if(anio() > 1 || constancia.id !== 'proyectosParticipantes') {
+        <div [class]="{'col-4': anio() > 1, 'col-6': anio() == 1}">
+          <button class="btn" [class]="{'btn-main-action':constancia.id == 'proyectosParticipantes', 'btn-primary': constancia.id == 'WORD', 'btn-danger': constancia.id == 'PDF'}"
+          (click)="download(constancia.id)" [disabled]="!active">
+            <i class="bi" [class]="{'bi-filetype-pdf': constancia.id == 'PDF', 'bi-file-earmark-word': constancia.id == 'WORD', 'bi-file-earmark-spreadsheet-fill': constancia.id == 'proyectosParticipantes'}"></i>
+            {{constancia.nombre}} @if(constancia.id !== 'proyectosParticipantes'){ {{getTipo()}} }
+          </button>
+        </div>
+      }
+    }
+  </div>
+  @if(active && anio() > 1) {
+    <div class="row mx-0 shadow-lg rounded-3 py-3 my-4">
+      @for(reporte of listaReportes; track $index) {
+        <div class="col-3">
+          <a (click)="download(reporte.id)">
+            <div class="card">
+              <div class="card-body">
+                <div class="row p-0 m-0">
+                  <div class="col-3">
+                    <h1><i class="bi bi-file-earmark-spreadsheet-fill"></i></h1>
+                  </div>
+                  <div class="col-9">
+                    <h5 class="card-title">{{reporte.nombre}}</h5>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </a>
-      </div>
-    }
-  </div>
+          </a>
+        </div>
+      }
+    </div>
+  }
 }
 
