Implementación de modificaciones

--- a/src/app/main/components/confirma-accion/confirma-accion.component.html
+++ b/src/app/main/components/confirma-accion/confirma-accion.component.html
@@ -8,9 +8,9 @@
               <img src="assets/logo-header.png" alt="Logo IECM">
             </div>
             <div class="col-12">
-                <h3 style="font-size: 30px;"><strong>SICOVACC</strong></h3>
-                <h4 style="font-size: 18px;">Sistema de Cómputos y Validaciones para las Consultas Ciudadanas</h4>
-                <h5 style="font-size: 15px;">Jornada de Consulta 2026 - 2027</h5>
+              <h3 style="font-size: 30px;"><strong>SICOVACC 2026</strong></h3>
+              <h4 style="font-size: 18px;">Sistema de Cómputos y Validaciones para las Consultas Ciudadanas</h4>
+              <br>
             </div>
             <div class="col-12 pt-3 mb-3">
               <h6 style="font-size: 13px;">Para conceder permiso proporcione sus credenciales de acceso</h6>
