--- a/src/app/main/pages/consult-page/consult-page.component.html
+++ b/src/app/main/pages/consult-page/consult-page.component.html
@@ -56,7 +56,7 @@
             <td>{{proyecto.num_proyecto}}</td>
             <td>{{proyecto.nom_proyecto}}</td>
             <td>{{proyecto.ciudadano_presenta}}</td>
-            <td>{{proyecto.folio_proy_web}}</td>
+            <td>{{proyecto.folio}}</td>
             <td>{{proyecto.fecha}}</td>
             <td>
               <button class="btn btn-main-action" (click)="openModal(proyecto.num_proyecto!)"><i class="bi bi-eye-fill"></i></button>
